--- a/src/app/commons/components/input/input.component.html
+++ b/src/app/commons/components/input/input.component.html
@@ -1,4 +1,4 @@
-<div [formGroup]="formParent" class="mb-3">
+<div [formGroup]="formParent" class="mb-3 {{ type }}">
   <label [for]="name"
     >{{ label }}
     <span
