--- a/src/app/layout/form/form.component.html
+++ b/src/app/layout/form/form.component.html
@@ -3,6 +3,7 @@
   <div class="card-body">
     <h4>Servicio</h4>
     <app-input
+    #inputNameCtrl
       [formParent]="form"
       [label]="inputName.text"
       [placeholder]="inputName.place"
