--- a/src/app/modules/dashboard/dashboard.component.html
+++ b/src/app/modules/dashboard/dashboard.component.html
@@ -2,10 +2,10 @@
 <div class="container">
   <app-header [options]="nav"></app-header>
   <div class="row">
-    <div class="col-9">
+    <div class="col-12 col-md-9">
       <router-outlet></router-outlet>
     </div>
-    <div class="col-3">
+    <div class="col-12 col-md-3">
       <app-form
       [form]="formJobs"
       (formChange)="new()" 
